idea/testData/multiModuleHighlighting/multiplatform/transitive/common/common.kt
<error descr="[HEADER_WITHOUT_IMPLEMENTATION] Header declaration 'boo' has no implementation in module jvm_base for JVM">header fun boo(b: String)</error>